# pe-resource-loader

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  libpe-resource-loader.pc.in  main.c  pe-resource-loader.pc.in
.github/workflows/: build.yml  doxygen.yml
include/: pe_resource_loader.h
pe_bitmap_loader/: main.c
pe_resource_types/: main.c
pe_string_loader/: main.c
src/: pe_resource_loader.c  tm_unicode.h
string_loader/: main.c
